# FastApi-dependency_injector-Celery-Celery-beat

./: README.md  dependencies.py  docker-compose.yml  main.py  pyproject.toml  worker.py
