[tool.poetry]
name = "fastapi-di-celery"
version = "0.1.0"
description = ""
authors = ["cjh <whwjdgh4186@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
dependency-injector = "^4.41.0"
celery = "^5.3.6"
redis = "^5.0.1"
uvicorn = "^0.26.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
